test/libhyperion/syntaxTests/functionCalls/module_not_callable.hyp
==== Source: A.hyp ====
==== Source: B.hyp ====
import "A.hyp" as A;

contract C {
    uint a = A(1000);
}
// ----
// TypeError 5704: (B.hyp:48-55): This expression is not callable.
